--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ button {
 .container {
     display: flex;
     max-width: 1400px;
-    /* height: 100vh; */
     margin: 30px auto;
     justify-content: center;
     gap: 36px;
@@ -60,58 +59,38 @@ button {
 
 .item-description {
     font-family: 'Farsan', cursive;
-    text-align: center;
-    white-space: normal;    
+    text-align: center; 
 }
 
 .item-btn {
     width: 100%;
     height: 36px;
-    display: flex;
     align-items: center;
-    background-color: #08ab5f;
     color: #fff;
     border-radius: 8px;
     overflow: hidden;
 }
 
 .item-btn-price {
-    flex-basis: 30%;
+    width: 100%;
     background-color: #000;
-    height: 100%;
     text-align: center;
     line-height: 36px;
-    transition: flex-basis 0.2s ease;
-    overflow: hidden;
 }
 
 .item-btn:hover .item-btn-price {
-    flex-basis: 0%;
+    display: none;
 }
 
 .item-btn-cart {
-    flex-basis: 0%;
-    opacity: 0;
-    overflow: hidden;
+    display: none;
+    width: 100%;
     background-color: #000;
     height: 100%;
     line-height: 36px;
-    transition: flex-basis 0.2s ease, opacity 0.2s ease;
 }
-
 .item-btn:hover .item-btn-cart {
-    flex-basis: 30%;
-    opacity: 1;
-}
-
-.item-btn-buy {
-    flex-basis: 70%;
-    height: 100%;
-    line-height: 36px;
-}
-
-.item-btn:hover .item-btn-buy {
-    background-color: #03703d;
+    display: block;
 }
 
 .item-btn-edit {
@@ -174,3 +153,6 @@ button {
 label {
     margin-bottom: 10px;
 }
+
+
+
